--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
