--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "playground": "ts-node src/playground/decorator.ts"
   },
   "keywords": [],
   "author": "",
